--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ breeds, care tips, and more!</p>
 <section id="gallery">
 <h2>Gallery</h2>
 <div class="gallery">
-<img src="C:\Users\24010620\Desktop\Jer\jer.jfif" alt="Dog 1">
-<img src="C:\Users\24010620\Desktop\Jer\ryll.jpg" alt="Dog 2">
-<img src="C:\Users\24010620\Desktop\Jer\An.jpg" alt="Dog 3">
-<img src="C:\Users\24010620\Desktop\Jer\Mik.jpg" alt="Dog 4">
+<img src="jer.jfif" alt="Dog 1">
+<img src="ryll.jpg" alt="Dog 2">
+<img src="An.jpg" alt="Dog 3">
+<img src="Mik.jpg" alt="Dog 4">
 </div>
 </section>
 <section id="contact">
